# poc-renovate-tool-management

./: .gitignore  MODULE.bazel  README.md  bazel-bin  bazel-out  bazel-poc-renovate-tool-management  bazel-testlogs  rules_jvm_external~~maven~maven_install.json
.github/: renovate.json
.github/workflows/: ci.yml
docker/: BUILD.bazel  Dockerfile
second-docker/: Dockerfile
src/main/kotlin/com/example/kotlinservice/: BUILD.bazel  KotlinService.kt
