load("@rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "kotlin_service",
    srcs = glob(["*.kt"]),
    visibility = ["//visibility:public"],
    deps = [
        "@depwatch_maven//:org_jetbrains_kotlin_kotlin_reflect",
        "@depwatch_maven//:org_jetbrains_kotlin_kotlin_stdlib",
    ],
)
